style.css
/* ... */
@font-face {
  font-family: "RobotoRegular";
  src: url("./assets/fonts/Roboto-Regular.woff"); /* IE9 Compat Modes */
}

@font-face {
  font-family: "RobotoBold";
  src: url("./assets/fonts/Roboto-Bold.woff"); /* IE9 Compat Modes */
}

@font-face {
  font-family: "FeeeelsFuzzy";
  src: url("./assets/fonts/FeeeelsFuzzyTrialRegular.woff"); /* IE9 Compat Modes */
}

@font-face {
  font-family: "RadleyRegular";
  src: url("./assets/fonts/Radley-Regular.woff"); /* IE9 Compat Modes */
}

@font-face {
  font-family: "RadleyItalic";
  src: url("./assets/fonts/Radley-Italic.woff"); /* IE9 Compat Modes */
}

/* Single blog post */

article {
  display: flex;
  flex-direction: row;
}

.article {
  border-right: 4px solid #d2030f;
  background-color: #dfdfdf;
}

.interactive {
  width: 25% !important;
  border-right: 4px solid #d2030f;
  background-color: #dfdfdf;
}

.interactive-tong-content{
  position: fixed;
  top: 0;
  width: 25%;
  height: 100%;
  border-right: 4px #d2030f solid;
  z-index: -1;
}

.content {
  margin-top: calc(95px + 6rem);
  padding: 50px;
}

.article__nav {
  height: 6rem;
  line-height: 6rem;
  border-bottom: 4px solid #d2030f;
  font-family: "RobotoRegular";
  font-size: 1.5rem;
  color: #d2030f;
  width: inherit;
  background-color: #dfdfdf;
  z-index: 10;
  top: 95px;
  border-right: 4px solid #d2030f;
  position: fixed;
}

.nav-arrows{
  padding-top: 27px;
}

.nav-arrow {
  font-family: 'RobotoRegular', sans-serif;
  font-size: 17px;
  font-weight: 800;
  display: flex;
  align-items: center;
}

.nav-arrow > .arrow-left {
  height: 30px;
  width: 30px;
  background: url(./assets/arrow_left.svg) no-repeat;
  background-size: contain;
  background-position: center;
  margin: 0 10px;
}

.nav-arrow > .arrow-right {
  height: 30px;
  width: 30px;
  background: url(./assets/arrow_right.svg) no-repeat;
  background-size: contain;
  background-position: center;
  margin: 0 10px;
}


.nav-subtitle a {
  color: #d2030f;
  text-decoration: none;
}

a,
a:visited {
  color: #d2030f;
  text-decoration: none;
}

.column {
  width: 50%;
}

html {
  height: 100%;
}
button{
  background: none;
  border: none;
}

#article-arrow, #menu-arrow {
  font-family: 'HalyardDisplayRegular';
  font-weight: 400;
  font-size: 2em;
  border: 1px solid #D2030F;
  border-radius: 100px;
  background-color: white;
  height: 50%;
  color: #D2030F;
  padding: 0.4em 1em 0.4em;
  cursor: pointer;
  transition: 0.2s ease-in-out all;
  display: block;
}

#article-arrow{
  margin-left: 1vw;
}

#menu-arrow{
  margin-right: 1vw;
}

#menu-arrow.hidden {
  display: none;
}

#article-arrow:hover, #menu-arrow:hover {
  background-color: #D2030F;
  color: white;
}

#article-arrow.hidden, #menu-arrow.hidden {
  display: none;
}

img.arrow{
  max-height: 42px;
  max-width: 42px;
  z-index: 2;
}
div#menu-buttons {
  z-index:10;
  width: 100%;
  position:absolute;
  top:50%;
}

#menu-arrow{
  float:right;
  color: #d2030f;
}
div#page {
  height: 100%;
  margin: 0;
}
div.background {
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  display: inline-block;
  position: absolute;
  top: 0;
  justify-content: center;
  display: flex;
  z-index: -10;
}

div.background > img {
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -o-user-select: none;
  -ms-user-select: none;
  user-select: none;

  -webkit-user-drag: none;
  -khtml-user-drag: none;
  -moz-user-drag: none;
  -o-user-drag: none;
  -ms-user-drag: none;
  user-drag: none;
}

div.rowstyle {
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: 100% 100%;
  display: inline-block;
}

main.site-main {
  height: 100%;
  margin-top: -1px;
}

.article-wrapper {
  height: 0;
}

.article-list {
  height: 100vh;
  width: 50%;
  top: 100vh;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 0;
  flex-direction: column;
  border-right: 4px solid #d2030f;
  overflow-y: scroll;
  background-color: #dfdfdf;
  justify-content: space-evenly;
  align-items: center;
  list-style-type: none;
  text-align: center;
  z-index: 1;
  overflow-y:scroll;
  visibility: hidden;
}

.article-wrapper .article-item{
  display: block;
  width: 100%;
  height: 25%;
  padding-left: 25%;
  padding-right:25%;
}

.article-item {
  height: auto !important;
  padding: 20px 25% !important;
}

.article-wrapper li:last-child{
  height:50%;
}

/* Article */

.entry-title {
  font-family: "HalyardDisplayRegular";
  color: #d2030f;
  font-size: 4vw;
  line-height: 4vw;
}

.entry-meta {
  margin-top: 3rem;
}

.author {
  font-family: "RadleyRegular";
  font-size: 1.875rem;
  color: #d2030f;
}

.illustrator__tagline {
  font-family: "RobotoBold";
  font-size: 1rem;
  margin-top: 6rem;
}

h2 {
  font-family: "RobotoBold";
  font-size: 1.5rem;
}

h3 {
  /*font-family: "RadleyItalic";*/
  font-size: 30px;
}

h3 i{
  font-weight: normal;
}

.references {
  margin: 0;
  padding: 0;
}

p {
  font-family: "RobotoLight";
  font-size: 1rem;
  line-height: 1.5rem;
}
/* 
p:first-child {
  font-size: 1.5rem;
  line-height: 2rem;
  /* font-family: 'RobotoLight'; 
} */

.wp-block-quote p {
  font-family: "RadleyItalic";
  margin: 6rem 5.75rem;
  size: 1.5rem;
  line-height: 2rem;
}

.interactivepiece {
  width: 75%;
  height: 100vh;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
}

.interactiveTong{
  top: 0;
  width: 75%;
  height: 100vh;
}

.interactiveTong2{
  position: fixed;
  top: 0;
  right: 0;
  height: 100%;
  width: 75%;
  background-color: #FFB633;
  z-index: -1;
}

.iframeTong2{
  min-height:90%;
  width: 100%;
}

.interactiveNun{
  top: 0;
  width: 75%;
  height: 100vh;
}

.iframe {
  width: 100%;
  height: 100%;
}

.illustrations {
  height: 100vh;
  position: -webkit-sticky; /* Safari */
  position: sticky;
  top: 0;
  z-index: -1;
}

.illustrations-fluid {
  position: relative;
}
/* ... */

